@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@posteo.net>
-" Last Change: January 23, 2018
+" Last Change: January 29, 2018
 " Inspired By: Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -128,9 +128,9 @@ syntax keyword vifmOption contained aproposprg autochpos caseoptions cdpath cd
 		\ numberwidth nuw previewprg relativenumber rnu rulerformat ruf runexec
 		\ scrollbind scb scrolloff so sort sortgroups sortorder sortnumbers shell sh
 		\ shortmess shm sizefmt slowfs smartcase scs statusline stl suggestoptions
-		\ syscalls tabstop timefmt timeoutlen title tm trash trashdir ts tuioptions
-		\ to undolevels ul vicmd viewcolumns vifminfo vimhelp vixcmd wildmenu wmnu
-		\ wildstyle wordchars wrap wrapscan ws
+		\ syscalls tabscope tabstop timefmt timeoutlen title tm trash trashdir ts
+		\ tuioptions to undolevels ul vicmd viewcolumns vifminfo vimhelp vixcmd
+		\ wildmenu wmnu wildstyle wordchars wrap wrapscan ws
 
 " Disabled boolean options
 syntax keyword vifmOption contained noautochpos nocf nochaselinks nodotfiles
