@@ -38,6 +38,7 @@
 #include "ui/fileview.h"
 #include "ui/quickview.h"
 #include "ui/statusbar.h"
+#include "ui/tabs.h"
 #include "ui/ui.h"
 #include "utils/darray.h"
 #include "utils/log.h"
@@ -204,6 +205,7 @@ static void suggestoptions_handler(OPT_OP op, optval_t val);
 static int read_int(const char line[], int *i);
 static void reset_suggestoptions(void);
 static void syscalls_handler(OPT_OP op, optval_t val);
+static void tabscope_handler(OPT_OP op, optval_t val);
 static void tabstop_handler(OPT_OP op, optval_t val);
 static void timefmt_handler(OPT_OP op, optval_t val);
 static void timeoutlen_handler(OPT_OP op, optval_t val);
@@ -326,6 +328,12 @@ static const char *shortmess_vals[][2] = {
 	{ "Tp", "all shortmess values" },
 	{ "T",  "shorten too long status bar messages" },
 	{ "p",  "substitute home path with ~ in view title" },
+};
+
+/* Possible values of 'tabscope'. */
+static const char *tabscope_vals[][2] = {
+	{ "global", "single tab contains panes and their layout" },
+	{ "pane",   "tab contains state of just one pane" },
 };
 
 /* Possible flags of 'tuioptions' and their count. */
@@ -689,6 +697,10 @@ options[] = {
 	{ "syscalls", "", "use system calls for file operations",
 	  OPT_BOOL, 0, NULL, &syscalls_handler, NULL,
 	  { .ref.bool_val = &cfg.use_system_calls },
+	},
+	{ "tabscope", "", "level at which tabs operate",
+	  OPT_ENUM, ARRAY_LEN(tabscope_vals), tabscope_vals, &tabscope_handler, NULL,
+	  { .ref.bool_val = &cfg.pane_tabs },
 	},
 	{ "tabstop", "ts", "widths of one tabulation",
 	  OPT_INT, 0, NULL, &tabstop_handler, NULL,
@@ -3054,6 +3066,18 @@ static void
 syscalls_handler(OPT_OP op, optval_t val)
 {
 	cfg.use_system_calls = val.bool_val;
+}
+
+/* Sets scope of a single tab. */
+static void
+tabscope_handler(OPT_OP op, optval_t val)
+{
+	/* Erase tabs on current scope before switching it. */
+	tabs_only(curr_view);
+	tabs_rename(curr_view, NULL);
+
+	cfg.pane_tabs = val.bool_val;
+	curr_stats.need_update = UT_REDRAW;
 }
 
 static void
