@@ -377,6 +377,7 @@ hi TabLine
 " "milleroptions" should be highlighted as 'option'
 " "lsoptions" should be highlighted as 'option'
 " "previewprg" should be highlighted as 'option'
+" "tabscope" should be highlighted as 'option'
 set dotfiles nodotfiles invdotfiles dotfiles!
 set caseoptions
 set sizefmt
@@ -384,6 +385,7 @@ set millerview nomillerview invmillerview
 set milleroptions
 set lsoptions
 set previewprg
+set tabscope
 
 " "term" should be highlighted as a function()
 echo term('cmd')
