@@ -6,6 +6,9 @@
 
 	Added TabLine highlight group for highlighting tab line.
 
+	Added 'tabscope' option that controls style of tabs.  Thanks to Cosmin
+	Popescu (a.k.a. cosminadrianpopescu).
+
 0.9.1-beta to 0.9.1
 
 	Fixed :clone and :copy refusing to copy broken symbolic links, even though C
